Updated text intro

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 							<div class="container">
 
 								<header class="major">
-									<h2>Hi there!</h2>
-									<p>My name is Marina I am a passionate coder, app designer and surfer. In love with Swift and animations.  I write about code, design, surfing and occasionally my own outlook on life. <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>my cv.</a><br />
+									<h2>Hi all!</h2>
+									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped me focus on how to make this situation better..I am here to learn Swift and share my last projects and prototypes.♾ <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>my cv.</a><br />
 									</p>
 								</header>
 							</div>
@@ -93,7 +93,7 @@
 						<section id="two">
 							<div class="container">
 								<h3>Things I Do</h3>
-							<p>I am currently based in Croatia, started learning programming as a student at Harvard Uni @ Dynamic Web Application semester course. With experience in projects developing Swift and Obj-C applications from 2016.</p>
+							<p>Currently based in Croatia, started learning programming as a student at Harvard Uni @Dynamic Web Application semester class from 2014.</p>
 								<ul class="feature-icons">
 									<li class="fa-code">Write the code</li>
 									<li class="fa-book">Read Apple Design GL</li>
@@ -109,7 +109,7 @@
 						<section id="three">
 							<div class="container">
 								<h3>A portfolio</h3>
-								<p>Designs and iOS apps, websites made in recent years. Last year I work for Enterprise store with signed NDA so these apps can not be shown.</p>
+								<p>Designs and iOS app development, websites made in recent years. Last year I work for Enterprise store with signed NDA and these apps can not be public.🙂</p>
 								<div class="features">
 									<article>
 										<a href="https://itunes.apple.com/us/app/sun-weather-cast/id1423713747?ls=1&mt=8" target="_blank" class="image"><img src="images/pic1.jpg" alt="" /></a>
@@ -122,7 +122,7 @@
 										<a href="#" target="_blank" class="image"><img src="images/pic2.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>iOS app YouTop</h4>
-											<p>Written in Obj-C during the time at App Academy.Ranking best YouTube videos app.</p>
+											<p>Written in Obj-C during the time at BootCamp.Ranking best YouTube videos app.</p>
 										</div>
 									</article>
 									<article>
@@ -143,7 +143,7 @@
 										<a href="#" class="image"><img src="images/pic5.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Website</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											<p>For competition on design</p>
 										</div>
 									</article>
 								</div>
