Added code clean and corrections

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 											<div class="12u">
 												<ul>
 													<li>Swift Programming Guide <a href ="https://docs.swift.org/swift-book/index.html" target="_blank"><em>A classic for coding</em></a></li>
-													<li>The pragmatic programmer<a href ="https://docs.swift.org/swift-book/index.html" target="_blank"></a></li>
+													<li>The pragmatic programmer<a href ="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X" target="_blank"> Thomas Hunt</a></li>
 													<li>Wabi sabi<a href ="https://spin.atomicobject.com/2016/12/17/software-is-imperfect/"target="_blank"></li>
 												</ul>
 									</header>
@@ -222,13 +222,12 @@
 									<hr />
 
 									<h5>My favorite piece of code: Determine if an array contains a condition matching element.</h5>
-									<pre><code>i = let fruits = ["Banana", "Apple", "Kiwi"]
+									<pre><code>let fruits = ["Banana", "Apple", "Kiwi"]
 let containsBanana = fruits.contains(where: { (fruit) in
     return fruit == "Banana"
 }) // Returns true
 }
 
-print("It took " + i + ' iterations to sort the deck.")
 					</code></pre>
 					</div>
 					</section>
