Add links to DexGen

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 								<header class="major">
 									<h2>Hi all!</h2>
-									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped me focus on how to make this situation better..I am here to learn Swift and share my last projects and prototypes.♾ <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>my cv.</a><br />
+									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped me focus on how to make this situation better...I am here to learn Swift and share my last projects and prototypes. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>  cv ↧ </a><br />
 									</p>
 								</header>
 							</div>
@@ -140,7 +140,7 @@
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic5.jpg" alt="" /></a>
+										<a href="http://www.dexgen.nl/" class="image"><img src="images/pic5.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Website</h4>
 											<p>For competition on design</p>
@@ -221,7 +221,7 @@
 									</header>
 									<hr />
 
-									<h5>My favorite piece of code: Determine if an array contains a condition matching element.</h5>
+									<h5>My favorite piece of Swift code: -determine if an array contains a condition matching element.</h5>
 									<pre><code>let fruits = ["Banana", "Apple", "Kiwi"]
 let containsBanana = fruits.contains(where: { (fruit) in
     return fruit == "Banana"
