Useless comment message

--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
 												</ul>
 									</header>
 									<header>
-										<h5>My 3 Favorite Biographies and Memoirs</h5>
+										<h5>My 3 Favorite Tech Blogs/Channels</h5>
 										<div class="row">
 											<div class="12u">
 												<ul>
-													<li>Nikola Tesla: The extraordinary life of a <a href ="https://medium.com/@huber.marina" target="_blank">modern Prometheus</a></li>
-													<li>The Rational Optimist: How Prosperity Evolves - Matt Ridley (As someone whose always identified as an optimist, this book first made me want to reject it, but the more I’ve thought about it, the more I’ve agreed with it.)</li>
-													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil</li>
+													<li>PostGraphile and Apollo on server support<a href ="https://discordapp.com/activity" target="_blank"> join the chat</a></li>
+													<li>The Next Web - Boris Veldhuijzen newsletter<a href =" https://thenextweb.com/" target="_blank"> join the chat</a></li>
+													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil<a href ="http://vaclavsmil.com/" target="_blank"> join the chat</a></li>http://vaclavsmil.com/
 												</ul>
 									</header>
 									<hr />
