--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 										<div class="row">
 											<div class="12u">
 												<ul>
-													<li>PostGraphile and Apollo on server support<a href ="https://discordapp.com/activity" target="_blank"> join the chat</a></li>
-													<li>The Next Web - Boris Veldhuijzen newsletter<a href =" https://thenextweb.com/" target="_blank"> join the chat</a></li>
-													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil<a href ="http://vaclavsmil.com/" target="_blank"> join the chat</a></li>http://vaclavsmil.com/
+													<li>PostGraphile and Apollo on server support<a href ="https://discordapp.com/activity" target="_blank"> Join the chat</a></li>
+													<li>The Next Web - Boris Veldhuijzen newsletter<a href =" https://thenextweb.com/" target="_blank"> Join the revolution</a></li>
+													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil<a href ="http://vaclavsmil.com/" target="_blank"> Reference</a></li>
 												</ul>
 									</header>
 									<hr />
