--- a/index.html
+++ b/index.html
@@ -210,13 +210,14 @@
 												</ul>
 									</header>
 									<header>
-										<h5>My 3 Favorite Tech Blogs/Channels</h5>
+										<h5>My Favorite Tech Blogs/Channels</h5>
 										<div class="row">
 											<div class="12u">
 												<ul>
 													<li>PostGraphile and Apollo on server support<a href ="https://discordapp.com/activity" target="_blank"> Join the chat</a></li>
 													<li>The Next Web - Boris Veldhuijzen newsletter<a href =" https://thenextweb.com/" target="_blank"> Join the revolution</a></li>
 													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil<a href ="http://vaclavsmil.com/" target="_blank"> Reference</a></li>
+													<li>Hacking with Swift<a href ="https://hackingwithswift.slack.com/" target="_blank"> Join the channel</a></li>
 												</ul>
 									</header>
 									<hr />
