ADD tech blog details

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 								<section>
 									Here’s an shallow attempt to quantify my education based on books, talks, blog posts, or anything else that’s helped me get where I am & keep me <strong>insipred</strong>. It is <em>important</em> to know the legacy left behind, in order to move forward.
-									<h4><blockquote>You can be the perfect programmer, but if you don’t know how to find work, communicate your skill to others, work effectively with a team, or keep your wits about you in stressful situations, then all things do not matter.</blockquote></h4>
+									<h4><blockquote>You can be the perfect programmer, but if you don’t know how to find work, communicate your skill to others, work effectively with a team, or keep your wits about you in stressful situations, then all things not matter. - Yoda</blockquote></h4>
 									<header>
 										<h5>On Programming</h5>
 										<div class="row">
@@ -214,9 +214,9 @@
 										<div class="row">
 											<div class="12u">
 												<ul>
-													<li>PostGraphile and Apollo on server support<a href ="https://discordapp.com/activity" target="_blank"> Join the chat</a></li>
-													<li>The Next Web - Boris Veldhuijzen newsletter<a href =" https://thenextweb.com/" target="_blank"> Join the revolution</a></li>
-													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil<a href ="http://vaclavsmil.com/" target="_blank"> Reference</a></li>
+													<li>Tim Ferris Show<a href ="https://tim.blog/" target="_blank"> Join the podcast</a></li>
+													<li>The Next Web - Boris Veldhuijzen newsletter<a href =" https://thenextweb.com/" target="_blank"> Join the event</a></li>
+													<li>Global Catastrophes and Trends: The Next 50 Years - Vaclav Smil<a href ="http://vaclavsmil.com/" target="_blank">  Reference</a></li>
 													<li>Hacking with Swift<a href ="https://hackingwithswift.slack.com/" target="_blank"> Join the channel</a></li>
 												</ul>
 									</header>
