--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
-							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stackoverflow" target="_blank"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
 						</ul>
 					</footer>
 				</section>
@@ -82,8 +82,8 @@
 							<div class="container">
 
 								<header class="major">
-									<h2>Hi all!</h2>
-									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped me focus on how to make this situation better...I am here to learn Swift and share my last knowledge and ideas. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>  cv ↧ </a><br />
+									<h2>Here for hire!</h2>
+									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped focus on how to make this situation better...I am here to learn Swift and share my knowledge and ideas. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>  cv ↧ </a><br />
 									</p>
 								</header>
 							</div>
