--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
 						<section id="two">
 							<div class="container">
 								<h3>Things I Do</h3>
-							<p>Currently based in Croatia, started learning programming in PHP as a summer student at Harvard CS @Dynamic Web Application semester classes. here are few thing I strive for.</p>
+							<p>Currently based in Croatia, started learning programming in PHP as a summer student at Harvard CS @Dynamic Web Application semester classes. here are few thing do:</p>
 								<ul class="feature-icons">
-									<li class="fa-code">Write the code</li>
+									<li class="fa-code">Write Swift code</li>
 									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink coffee and bot tweet</li>
 									<li class="fa-users">Beginner Unity C#</li>
 									<li class="fa-cubes">OSS rewriting and complaining</li>
-									<li class="fa-bolt">Hackathons with friends</li>
+									<li class="fa-bolt">Hackathon with friends</li>
 								</ul>
 							</div>
 						</section>
