--- a/index 2.html
+++ b/index 2.html
@@ -98,7 +98,7 @@
 									<li class="fa-code">Write Swift code</li>
 									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink coffee and bot tweet</li>
-									<li class="fa-users">Beginner Unity C#</li>
+									<li class="fa-users">Beginner ML -> RL(Python)</li>
 									<li class="fa-cubes">OSS rewriting and complaining</li>
 									<li class="fa-bolt">Hackathon with friends</li>
 								</ul>
