ADD D. Knuth bits analysis

--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 										<div class="row">
 											<div class="12u">
 												<ul>
-													<li>Swift Programming Guide <a href ="https://docs.swift.org/swift-book/index.html" target="_blank"><em>A classic for coding</em></a></li>
+													<li>Swift Programming Guide <a href ="https://docs.swift.org/swift-book/index.html" target="_blank"><em>A intro to fuctional programming</em></a></li>
 													<li>The pragmatic programmer<a href ="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master/dp/020161622X" target="_blank"> Thomas Hunt</a></li>
-													<li>Wabi sabi<a href ="https://spin.atomicobject.com/2016/12/17/software-is-imperfect/"target="_blank"></li>
+													<li>The Art of Computer Programming<a href ="https://en.wikipedia.org/wiki/The_Art_of_Computer_Programming"target="_blank"><em>D. Knuth</em></li>
 												</ul>
 									</header>
 									<header>
