--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 								<header class="major">
 									<h2>Here for hire!</h2>
-									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped focus on how to make this situation better...I am here to learn Swift and share my knowledge and ideas. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_iOS_progrMarina.pdf" target="_blank" download>  cv ↧ </a><br />
+									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped focus on how to make this situation better...I am here to learn Swift and share my knowledge around it. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv" target="_blank" download>  cv here ↧ </a><br />
 									</p>
 								</header>
 							</div>
@@ -93,13 +93,13 @@
 						<section id="two">
 							<div class="container">
 								<h3>Things I Do</h3>
-							<p>Currently based in Croatia, started learning programming in PHP as a summer student at Harvard CS @Dynamic Web Application semester classes. here are few thing do:</p>
+							<p>Currently based in Croatia, my first serious programming laguage was ObjeC, learned @AppBootcamp. Well here are some things I like to do </p>
 								<ul class="feature-icons">
 									<li class="fa-code">Write Swift code</li>
 									<li class="fa-book">Read Apple Design GL</li>
-									<li class="fa-coffee">Drink coffee and bot tweet</li>
-									<li class="fa-users">Beginner Unity C#</li>
-									<li class="fa-cubes">OSS rewriting and complaining</li>
+									<li class="fa-coffee">Drink decaf and bot tweet</li>
+									<li class="fa-cubes">Obsess about surf apps</li>
+									<li class="fa-users">Beginner SwiftUI</li>
 									<li class="fa-bolt">Hackathon with friends</li>
 								</ul>
 							</div>
@@ -241,11 +241,12 @@ print(fibonacci(10))
 					</section>
 
 
-					<!-- 
+					
 						<section id="five">
 							<div class="container">
 								<h3>Want more?</h3>
-								<p>Contact or forward to a friend who is in need designbohemia@icloud.com.</p>
+								<p>Contact or forward to a friend who is in need at:<h1>huber.marina@gmail.com</h1></p>
+								<!-- 
 								<form method="post" action="#">
 									<div class="row uniform">
 										<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -266,10 +267,11 @@ print(fibonacci(10))
 										</div>
 									</div>
 								</form>
+								 -->
 							</div>
 						</section>
 
-					-->
+					
 
 
 	<!--
