Random commit fix

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 								<header class="major">
 									<!-- <h2>Here for hire!</h2> -->
-									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped focus on how to make this situation better...I am here to learn Swift and share my knowledge around it. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv.pdf" target="_blank" download>  cv here ↧ </a><br />
+									<p>Wabi Sabi is japanese for accepting and being mindful that software products, like the natural world around us, are never perfect, permanent, or finished. It has given me some small sense of peace and helped focus on how to make this situation better...I am here to learn Swift and share my knowledge around it. ♾  <img src="https://img.shields.io/badge/download-now-blue.svg" height="23" alt="" /> <a href="images/cv_new.pdf" target="_blank" download>  cv here ↧ </a><br />
 									</p>
 								</header>
 							</div>
