--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 							</div>
 						</section>
 
-					<!-- Two -->
+					<!-- Two "fa-code" -->
 						<section id="two">
 							<div class="container">
 								<h3>Things I Do</h3>
 							<p>Currently based in Croatia, my first serious programming laguage was ObjeC, learned @AppBootcamp. Well here are some things I like to do </p>
 								<ul class="feature-icons">
-									<li class="fa-code">Write Swift code</li>
+									<li class="https://img.shields.io/badge/swift%205-.git-blueviolet.svg" height="23" alt="">Write Swift code</li>
 									<li class="fa-book">Read Apple Design GL</li>
 									<li class="fa-coffee">Drink decaf and bot tweet</li>
 									<li class="fa-cubes">Obsess about surf apps</li>
