--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
 	</head>
-	<body>
+	<body style="background-color: #000000 !important" >
 		<div id="wrapper">
 
 			<div id="mount"></div>
