--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 					<!-- Two "fa-code" -->
 						<section id="two">
 							<div class="container">
-								<h3>Things I Do</h3>
-							<p>Currently based in Croatia, my first serious programming laguage was ObjeC, learned @AppBootcamp. Well here are some things I like to do </p>
+								<h3>To Do</h3>
+							<p>Currently based in Croatia, full-time Obj-C/Swift developer, trained @AppBootcamp Amsterdam. With math-3D background. </p>
 								<ul class="feature-icons">
 									<li class=""><img src="https://img.shields.io/badge/swift%205-.git-blueviolet.svg" height="23" alt="" />   Write Swift code</li>
 									<li class=""><img src="https://img.shields.io/badge/Apple-DGL-lightblue.svg" height="23" alt="" />   Read Apple Design GL</li>
