--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#one" class="active">About me</a></li>
-							<li><a href="#two">Things I Do</a></li>
+							<li><a href="#two">To Do</a></li>
 							<li><a href="#three">Portfolio</a></li>
 							<li><a href="#four">Resources</a></li>
 							<li><a href="#five">Contact</a></li>
@@ -66,6 +66,8 @@
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
+							Github</span></a></li>
+							<li><a href="https://forums.swift.org/u/marinahuber" class="icon fa-swift" target="_blank"><span class="label">Stackoverflow</span></a></li>
 						</ul>
 					</footer>
 				</section>
