--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
 							Github</span></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber" class="icon fa-swift" target="_blank"><span class="label">Stackoverflow</span></a></li>
+							<li><a href="https://forums.swift.org/u/marinahuber" class="fab fa-swift" target="_blank"><span class="label">Stackoverflow</span></a></li>
 						</ul>
 					</footer>
 				</section>
