--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 					<footer>
 						<ul class="icons">
 
-							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
-							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label">Stackoverflow</span></a></li>
+							<li><a href="https://stackoverflow.com/users/4406341/marina" class="icon fa-stack-overflow" target="_blank"><span class="label"></span></a></li>
 							Github</span></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber" class="fab fa-swift" target="_blank"><span class="label">Stackoverflow</span></a></li>
+							<li><a href="https://forums.swift.org/u/marinahuber" class="fa fa-swift" target="_blank"><span class="label"></span></a></li>
 						</ul>
 					</footer>
 				</section>
