--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber" class="fas fa-swift" target="_blank"></a><p>&#f8e1;<p></li>
+							<li><a href="https://forums.swift.org/u/marinahuber" class="svg-inline--fa fa-swift fa-w-14 fa-lg" target="_blank"></a></li>
 						</ul>
 					</footer>
 				</section>
