--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 						<ul class="icons">
 
 							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"></a></li>
-							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
+							<li><a href="https://medium.com/@huber.marina" class="fas fa-swift" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber" class="fab fa-swift" target="_blank"></a></li>
+							<li><a href="https://forums.swift.org/u/marinahuber" class="fas fa-swift" target="_blank"></a></li>
 						</ul>
 					</footer>
 				</section>
 
-			<!-- Main -->
+			<!-- Main fa fa-medium -->
 				<div id="main">
 
    	<!-- inline div mount -->
