--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.1/css/all.css">
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
@@ -62,14 +63,14 @@
 						<ul class="icons">
 
 							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"></a></li>
-							<li><a href="https://medium.com/@huber.marina" class="fas fa-swift" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
+							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"></a></li>
 							<li><a href="https://forums.swift.org/u/marinahuber" class="fas fa-swift" target="_blank"></a></li>
 						</ul>
 					</footer>
 				</section>
 
-			<!-- Main fa fa-medium -->
+			<!-- Main  -->
 				<div id="main">
 
    	<!-- inline div mount -->
