--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
 							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber" target="_blank"></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber"><img src="images/swift.svg" style="width:42px;height:42px;border:0;"></a></li>
+							<li><a href="https://forums.swift.org/u/marinahuber"><img src="images/swift.svg" style="width:35px;height:35px;"></a></li>
 						</ul>
 					</footer>
 				</section>
