--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
 					<footer>
 						<ul class="icons">
 
-							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"></a></li>
+					<!-- 		<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw" class="icon fa-twitter" target="_blank"></a></li>
 							<li><a href="https://medium.com/@huber.marina" class="fa fa-medium" aria-hidden="true" target="_blank"><span class="label"></span></a></li>
-							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"></a></li>
-							<li><a href="https://forums.swift.org/u/marinahuber"><img src="images/swift.svg" style="width:35px;height:35px;stroke-width:10"></a></li>
+							<li><a href="https://github.com/MarinaHuber" class="icon fa-github" target="_blank"></a></li> -->
+							<li><a href="https://forums.swift.org/u/marinahuber"><img src="images/swift.svg" style="width:35px;height:35px;"></a></li>
+							<li><a href="https://twitter.com/SerinnahHuber?ref_src=twsrc%5Etfw"><img src="images/twitter.svg" style="width:35px;height:35px;"></a></li>
+							<li><a href="https://github.com/MarinaHuber"><img src="images/github-alt.svg" style="width:35px;height:35px;"></a></li>
+							<li><a href="https://medium.com/@huber.marina"><img src="images/medium.svg" style="width:35px;height:35px;"></a></li>
 						</ul>
 					</footer>
 				</section>
