--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
 	<head>
 		<title>About Code Bohemia</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
 
