--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
 				<a href="https://apps.apple.com/app/id1522748105" target="_blank" />
 					<img src="css/images/downloadSurfC.png" />
 					<h3>Surf Curve</h3>
-					<h2>Surf trip guide powered by machine learning and surfers information.</h2>
+					<h2>Surf trip guide powered by machine learning <br />
+					and surfers information.</h2>
 					<p>Swift 5 &nbsp;&bull;&nbsp; CoreML &nbsp;&bull;&nbsp; Animation</p>
 				</a>
 				<a href="https://apps.apple.com/us/app/id1423713747" target="_blank" />
 					<img src="css/images/downloadSunW.png" />
 					<h3>Sun Weather Cast</h3>
-					<h2>Easy-to-use animated weather app showing OpenSource weather data.</h2>
+					<h2>Easy-to-use animated weather app <br />
+					showing OpenSource weather information.</h2>
 					<p>Swift 4 &nbsp;&bull;&nbsp; Animation &nbsp;&bull;&nbsp; REST API</p>
 				</a>
 			</section>
