--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <html>
 	<head>
-		<title>About Code Bohemia</title>
+		<title>iOS developer and design freelancer</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Doing structural engeneering within Apple realm. Record proven iOS developer with passion for Swift and animations. Test, build and ship apps from concept to App Store. Always looking for a next great remote team strategy and communication style. Strong eye for detail and extensive experience in UI design." />
+		<meta name="keywords" content="Swift, digital, remote, developer, engeneering, apps, designer, animations, SwiftUI" />
+		<meta name="author" content="Marina Huber" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
