--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-					<p><a href="mailto:huber.marina@gmail.com?subject=Mail from Our Site" target="_blank" >Hire me as freelance iOS developer</a></p>
+					<p><a href="mailto:huber.marina@gmail.com?subject=Mail from Our Site" target="_blank" >Say hallo here</a></p>
 					</footer>
 
 			</div>
