--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
 
 		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
+			<!-- <link rel="stylesheet" href="css/skel.css" /> -->
+			<!-- <link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
-			<link rel="stylesheet" href="css/all.min.css">
+			<link rel="stylesheet" href="css/all.min.css"> -->
 
 		</noscript>
 		<script src="js/skel.min.js"></script>
