content behinf notch solution2
https://itnext.io/make-your-pwas-look-handsome-on-ios-fd8fdfcd5777

--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 		<meta name="description" content="Test, build and ship apps from concept to App Store. Always looking for a next great remote team strategy and communication style. Strong eye for detail and animations." />
 		<meta name="keywords" content="Swift, digital, remote, developer, engeneering, apps, designer, animations, SwiftUI" />
 		<meta name="author" content="Marina Huber" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" /> -->
+		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width, maximum-scale=1, user-scalable=no"></meta>
+ 		<meta name="apple-mobile-web-app-capable" content="yes"></meta>
+  		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"></meta>
 
   <!-- <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png"> -->
 
 		<noscript>
 			<!-- <link rel="stylesheet" href="css/skel.css" /> -->
-			<!-- <link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<!--<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-noscript.css" />
 			<link rel="stylesheet" href="css/all.min.css"> -->
 
