try after  limit of 10 builds per hour

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
  		<meta name="apple-mobile-web-app-capable" content="yes"></meta>
   		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"></meta>
 
-  <!-- <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png"> -->
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="css/images/favicon-32x32.png">
+   solution for NOTCH: https://gist.github.com/valnub/aebdb788895f8c581d9971b6aed994af  -->
 
 		<noscript>
 			<!-- <link rel="stylesheet" href="css/skel.css" /> -->
